--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "simple-weather-app",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html",
+    "start": "parcel index.html ",
+    "build": "parcel build index.html ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
