--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "parcel index.html ",
-    "build": "parcel build index.html ",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "parcel build index.html "
   },
   "repository": {
     "type": "git",
