--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "simple-weather-app",
   "version": "1.0.0",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,7 @@
   "description": "Weather app",
   "dependencies": {
     "core-js": "^3.44.0",
+    "parcel": "^2.0.0-beta.1",
     "regenerator-runtime": "^0.14.1"
-  },
-  "devDependencies": {
-    "parcel": "^2.15.4"
   }
 }
